--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,18 @@
+name: deploy
+on:
+  push:
+    branches:
+      - main
+      - master
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
+      - run: npm install
+
+      - name: Deploy to Staging server
+        uses: easingthemes/ssh-deploy@main
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
