--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Connect to server
-      uses: adr Meijer/ssh-action@master
+      uses: Meijer/ssh-action@master
       with:
         host: 192.168.1.21
         username: myuser
