--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,13 @@ jobs:
             host: 192.168.1.21
             user: test
             pass: azerty
+            port: 22
+            connect_timeout: 10s
+            first_ssh: |
+              rm -rf /home/test/reussi
+              ls -la  \necho $WELCOME 
+              mkdir -p /home//test/test1 && 
+              mkdir -p /home/test/test2 &&
             scp: |
               './test/*' => /home/test/test1
           
