--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
-        key_files: /Documents/id_rsa
+        key: /Documents/id_rsa
         known_hosts: ${{ secrets.KNOWN_HOSTS }}
         
         
